2009-02-20  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Add a shared floating text input window implementation, to be used by the hosted plug-in view.
        
        * Plugins/Hosted/WebTextInputWindowController.h: Added.
        * Plugins/Hosted/WebTextInputWindowController.m: Added.

2009-02-20  Kevin Decker  <kdecker@apple.com>

        Reviewed by andersca.
    
        <rdar://problem/6496140> Safari sometimes hangs in WKSetMetadataURL for several seconds after downloading a file
         
         Spawn a background thread for WKSetMetadataURL because this function will not return until mds has journaled the data
         we are trying to set. Depending on what other I/O is going on, it can take some time. 

        * Misc/WebNSFileManagerExtras.m: Import pthread.h and FoundationExtras.h
        (setMetaData): Added. Calls WKSetMetadataURL().
        (-[NSFileManager _webkit_setMetadataURL:referrer:atPath:]): Call setMetaData on a background thread 
 
2009-02-19  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        - WebKit part of fixing https://bugs.webkit.org/show_bug.cgi?id=24027
          Do not send loader callbacks during CSS styling

        * WebView/WebView.mm:
        (-[WebView _preferencesChangedNotification:]): Reverted the
        iChat-specific quirk added in <http://trac.webkit.org/changeset/41071>.

2009-02-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Brady Eidson.

        - WebKit part of fixing <rdar://problem/6507512> Crash in iChat at CSSStyleSelector::adjustRenderStyle

        * WebView/WebView.mm:
        (-[WebView _preferencesChangedNotification:]): Activate the WebCore
        workaround for this crash in iChat.

2009-02-18  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Fix for <rdar://problem/6542390>
        
        There's no need to call setDefersLoading here - we already defer anything a plug-in can do that